// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navigation.ts: pressing ArrowDown from the left GapCursor position should focus the title when an expand is collapsed 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "title",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowDown should set cursor after collapsed expand when it is in a title 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "content": Array [
        Object {
          "text": "abc",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowDown should set cursor from expand title to the content 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "abc",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowLeft from an expand title should set the left GapCursor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "before",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowRight from an expand title should set the right GapCursor 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "content": Array [
        Object {
          "text": "after",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowUp from a second line of an expand content should not focus the title 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "onetest",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "text": "two",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowUp from an expand content should focus the title 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "title",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "content",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowUp from an expand title should set the left GapCursor 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "before",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing ArrowUp from the right GapCursor position should focus the title when an expand is collapsed 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "title",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing Backspace should delete an expand when cursor is inside content 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing Backspace should delete an expand when cursor is inside title 1`] = `
Object {
  "content": Array [
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`navigation.ts: pressing Enter should collapse an expand when cursor is inside title 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "",
      },
      "content": Array [
        Object {
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
